--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 				</div>
 				<div class="item">
 					<h1>Hochauflösende Aufnahmen!</h1>
-					<p>Bei uns wird IT-Sicherheit groß geschrieben! Unsere White-Hat Hacker beraten Sie umfassend!</p>
+					<p>Bei uns werden Farben gelebt!</p>
 					<p><a class="btn btn-primary" href="#">Testlink</a></p>
 				</div>
 				<div class="item">
 					<h1>Feierlichkeiten! - Wir übernehmen das fotografieren auf ihrer Feier!</h1>
-					<p>Wir bieten rundum 24/7 Support an!</p>
+					<p>Jederzeit Buchbar!</p>
 					<p><a class="btn btn-primary" href="#">Kontaktieren Sie uns!</a></p>
 				</div>			  
 			</div>
